--- a/config.json
+++ b/config.json
@@ -5,5 +5,6 @@
 	"broadcast" : "10.0.2.255",
 	"dns" : "10.0.1.1",
 	"gateway" : "10.0.2.2"
-    }
+    },
+    "mirror" : "http://ftp.portlane.com/pub/os/linux/archlinux/$repo/os/$arch"
 }
